# ChangeLog for media-gfx/context-free
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  context-free-2.2_beta2.ebuild:
  Drop unneeded RDPEND

  02 Aug 2008; Markus Ullmann <jokey@gentoo.org>
  context-free-2.2_beta2.ebuild:
  Remove default function

  01 Aug 2008; Dmitry Dzhus (dzhus) <dima@sphinx.net.ru>
  +context-free-2.2_beta2.ebuild,
  +files/context-free-2.2_beta2-fix-cpp-headers.patch, +metadata.xml:
  New ebuild from bug 98293
