@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/context-free
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  19 Jan 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  context-free-2.2_beta2.ebuild:
+  Add suggested RDEPEND=${DEPEND}, simplify
 
   03 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
   context-free-2.2_beta2.ebuild:
